--- a/UI/src/app/shared/components/navbar/navbar.template.html
+++ b/UI/src/app/shared/components/navbar/navbar.template.html
@@ -1,5 +1,5 @@
 <nav class="bg-blue-500 text-white p-4 flex justify-between">
-  <div class="font-bold">FIG</div>
+  <div class="font-bold">Financial Independence Group</div>
   <ul class="flex gap-4">
     <li>
       <a ui-sref="home" class="hover:underline">Home</a>
