--- a/UI/src/app/features/home/home.style.scss
+++ b/UI/src/app/features/home/home.style.scss
@@ -1,3 +1,43 @@
-home-component {
-    @apply h-full w-full
+.home-section {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  .home-hero {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1b5375;
+    height: 100%;
+    padding: 2rem;
+  
+  .home-hero-content {
+    max-width: 600px;
+    text-align: center; 
+  }
+  
+  .home-logo {
+    display: block; 
+    max-width: 225px;
+    margin: 0 auto 1rem;
+  }
+  
+  .home-heading {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1rem; 
+  }
+  
+  .home-paragraph {
+    font-size: 1.125rem;
+    line-height: 1.5;
+  }
 }
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* ensures no scroll for the entire page */
+  }
+  
