--- a/UI/src/app/shared/components/navbar/navbar.template.html
+++ b/UI/src/app/shared/components/navbar/navbar.template.html
@@ -1,11 +1,13 @@
-<nav class="bg-blue-500 text-white p-4 flex justify-between">
-  <div class="font-bold">Financial Independence Group</div>
-  <ul class="flex gap-4">
+<nav class="navbar">
+  <div class="navbar-brand">
+    FIG
+  </div>
+  <ul class="navbar-menu">
     <li>
-      <a ui-sref="home" class="hover:underline">Home</a>
+      <a ui-sref="home" class="navbar-link">Home</a>
     </li>
     <li>
-      <a ui-sref="accounts" class="hover:underline">Accounts</a>
+      <a ui-sref="accounts" class="navbar-link">Accounts</a>
     </li>
   </ul>
 </nav>
